--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://ademklf.github.io/chatgpt-messenger",
   "name": "chatgpt-messenger",
   "version": "0.1.0",
   "private": true,
@@ -6,7 +7,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.16",
@@ -15,6 +18,7 @@
     "@types/react-dom": "18.0.11",
     "firebase": "^9.18.0",
     "firebase-admin": "^11.5.0",
+    "gh-pages": "^5.0.0",
     "next": "13.2.4",
     "next-auth": "^4.20.1",
     "openai": "^3.2.1",
